--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,61 +4,47 @@
     font-weight: 700;
     font-style: normal;
 }
-
 @font-face {
     font-family: "Inter";
     src: url("../fonts/static/Inter-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
-
 @font-face {
     font-family: "Inter";
     src: url("../fonts/static/Inter-SemiBold.ttf") format("truetype");
     font-weight: 600;
     font-style: normal;
 }
-
 .container {
-
     display: flex;
     justify-content: center;    /* centre horizontalement */
     align-items: center;        /* centre verticalement */
-    flex-direction: column;        /* en colonne */
-    gap: 20px;                  /* espace entre éléments */
+    flex-direction: row;        /* en colonne */
     height: 100vh;              /* occupe la hauteur de la fenêtre */
     background:  hsl(0, 0%, 8%);
     margin: 0;
     width: 100%;
-
 }
 .contenue {
     background-color: hsl(0, 0%, 12%);
     max-width: 375px;
     border-radius: 15px;
     border: 1px solid hsl(0, 0%, 8%);
-    
-
+    text-align: center;    
 }
-.vertical_box_2{
-    display: block;
-    text-align: center;
-    padding: 30px 0 0 0;
-}
-
 img{
+    padding: 30px 0 0 0;
     width: 25%;
     height: 25%;
     border-radius: 100%;
 }
-
 .titre {
     font-family: "Inter", sans-serif;
     font-size: 25px;
     color: hsl(0, 0%, 100%);
     font-weight: 600;
-    margin-bottom: 8px;
-   
+    margin-bottom: 8px;   
 }
 .place{
     font-family: "Inter", sans-serif;
@@ -66,11 +52,9 @@ img{
     color: hsl(75, 94%, 57%);
     font-weight: 600;
     margin-top: 8px;
-    margin-bottom: 30px;
-    
+    margin-bottom: 30px;    
 }
 p {
-
     font-family: "Inter", sans-serif;
     font-size: 14px;
     color: hsl(0, 0%, 100%);
@@ -81,15 +65,10 @@ p {
     font-weight: 400;
     font-family: "Inter", sans-serif;
     font-size: 14px;
-    color: hsl(0, 0%, 20%);
-    width:375px;
-    display: flex;
-    justify-content: center; /* centre horizontalement */
-    align-items: center;
+    width:375px;  
 }
 
 .btn  {
-
     text-align: center;
     font-family: "Inter", sans-serif;
     font-weight: 600;
@@ -100,10 +79,9 @@ p {
     border-radius: 6px;
     cursor: pointer;
     font-size: 14px;
-    width: 75%;
+    width: 80%;
 }
 .btn:hover {
-   
     background-color: hsl(75, 94%, 57%); /* vert */
     color: hsl(0, 0%, 0%);
 }
