--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,9 @@
     border: 1px solid hsl(0, 0%, 8%);
     text-align: center;    
 }
+entete{
+    text-align: center;
+}
 img{
     padding: 30px 0 0 0;
     width: 25%;
