--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,13 +33,12 @@
     border: 1px solid hsl(0, 0%, 8%);
     text-align: center;    
 }
-entete{
+.entete {
     text-align: center;
 }
-img{
+.entete img {
     padding: 30px 0 0 0;
-    width: 25%;
-    height: 25%;
+    width: 25%;    
     border-radius: 100%;
 }
 .titre {
