--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,7 @@
     font-size: 25px;
     color: hsl(0, 0%, 100%);
     font-weight: 600;
+    margin-top: 8px;
     margin-bottom: 8px;   
 }
 .place{
