Modification taille de la fenetre

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,7 +47,8 @@
     font-size: 25px;
     color: hsl(0, 0%, 100%);
     font-weight: 600;
-    margin-bottom: 8px;   
+    margin-bottom: 8px;
+    margin-top: 8px;   
 }
 .place{
     font-family: "Inter", sans-serif;
